fix(parts): fix issue when our grid is bleeding into the editor

--- a/src/main/resources/assets/styles/foundation/_grids.scss
+++ b/src/main/resources/assets/styles/foundation/_grids.scss
@@ -1,4 +1,4 @@
-.grid {
+.grid-list {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
