--- a/src/main/resources/assets/styles/parts/_article.scss
+++ b/src/main/resources/assets/styles/parts/_article.scss
@@ -1,3 +1,9 @@
+.article-list {
+  &.grid {
+    @extend .grid-list
+  }
+}
+
 .article {
   & .article-creds {
     display: flex;
